# deepin-scanner

./: .gitignore  CMakeLists.txt
assets/deepin-scanner/scan-manager/en_US/: scan-manager.md
assets/deepin-scanner/scan-manager/zh_CN/: scan-manager.md
assets/deepin-scanner/scan-manager/zh_HK/: scan-manager.md
assets/deepin-scanner/scan-manager/zh_TW/: scan-manager.md
assets/logconfig/: org.deepin.scanner.json
debian/: changelog  control  rules
resources/: deepin-scanner.desktop
src/: CMakeLists.txt  ddlog.h  logger.cpp  main.cpp  mainwindow.cpp  mainwindow.h
src/device/: devicebase.h  scannerdevice.cpp  scannerdevice.h  webcamdevice.cpp  webcamdevice.h
src/libofd/include/ofd/: ofd_writer.h
src/libofd/src/: ofd_writer.cpp
src/ui/: loadingdialog.cpp  loadingdialog.h  scannerswidget.cpp  scannerswidget.h  scanwidget.cpp  scanwidget.h
translations/: deepin-scanner.ts  deepin-scanner_ady.ts  deepin-scanner_af.ts  deepin-scanner_am_ET.ts  deepin-scanner_ar.ts  deepin-scanner_ast.ts  deepin-scanner_az.ts  deepin-scanner_bg.ts  deepin-scanner_bn.ts  deepin-scanner_bo.ts  deepin-scanner_bqi.ts  deepin-scanner_br.ts  deepin-scanner_ca.ts  deepin-scanner_cs.ts  deepin-scanner_da.ts  deepin-scanner_de.ts  deepin-scanner_el.ts  deepin-scanner_en_AU.ts  deepin-scanner_en_US.ts  deepin-scanner_eo.ts  deepin-scanner_es.ts  deepin-scanner_et.ts  deepin-scanner_eu.ts  deepin-scanner_fa.ts  deepin-scanner_fi.ts  deepin-scanner_fil.ts  deepin-scanner_fr.ts  deepin-scanner_gl_ES.ts  deepin-scanner_he.ts  deepin-scanner_hi_IN.ts  deepin-scanner_hr.ts  deepin-scanner_hu.ts  deepin-scanner_hy.ts  deepin-scanner_id.ts  deepin-scanner_it.ts  deepin-scanner_ja.ts  deepin-scanner_ka.ts  deepin-scanner_km_KH.ts  deepin-scanner_kn_IN.ts  deepin-scanner_ko.ts  (+38 more)
